// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-m4cwzq"
    color="default"
  >
    DEFAULT
  </button>
  <button
    className="css-wrrvp2"
    color="primary"
  >
    PRIMARY
  </button>
  <button
    className="css-a2sz82"
    color="secondary"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-yfsx2h"
    color="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1t6ihar"
    color="primary"
  >
    PRIMARY
  </button>
  <button
    className="css-1bu10e3"
    color="secondary"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button Solid 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-107z5ot"
    color="default"
  >
    DEFAULT
  </button>
  <button
    className="css-7yq31d"
    color="primary"
  >
    PRIMARY
  </button>
  <button
    className="css-syst5r"
    color="secondary"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-b8aw23"
    color="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1t779wu"
    color="primary"
  >
    PRIMARY
  </button>
  <button
    className="css-cpi4y0"
    color="secondary"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-ts9p9g"
    color="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1w0hlfy"
    color="primary"
  >
    PRIMARY
  </button>
  <button
    className="css-giy1pt"
    color="secondary"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-102euhn"
    color="default"
  >
    DEFAULT
  </button>
  <button
    className="css-ymmswl"
    color="primary"
  >
    PRIMARY
  </button>
  <button
    className="css-bl9uac"
    color="secondary"
  >
    SECONDARY
  </button>
</div>
`;
